fixing form font size on mobile

--- a/src/Components/contact/Contact.css
+++ b/src/Components/contact/Contact.css
@@ -79,3 +79,9 @@
   font-size: 1.5rem;
   font-weight: 600;
 }
+@media screen and (max-width: 435px) {
+  .contact form input,
+  .contact form textarea {
+    font-size: 0.6rem;
+  }
+}
